--- a/djangoproject/gestion_stock/templates/Zone_depot.html
+++ b/djangoproject/gestion_stock/templates/Zone_depot.html
@@ -136,46 +136,48 @@
                         </div>
 
                         {% else %}
-                            <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
-                            <thead>
-                            <tr>
-                                <th scope="col" class="th-sm"> modify </th>
-                                <th scope="col" class="th-sm"> nom </th>
-                                <th scope="col" class="th-sm"> delete </th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                        {% for items in zoned %}
-                            {% if items.fk_TypeZoneDepot == None %}
-                                <tr>
-                                    <td> <button id='{{ items.idZoneDepot }}' class="dyna"> -> </button></td>
-                                    <td> {{ items.nom }} </td>
-                                    <td> <button id='{{ items.idZoneDepot }}' class="dynad"> X </button> </td>
-                                </tr>
-                            {% else %}
-                        {% endif %}
+                            {% if forloop.counter ==  1 %}
+                                    <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+                                    <thead>
+                                    <tr>
+                                        <th scope="col" class="th-sm"> modify </th>
+                                        <th scope="col" class="th-sm"> nom </th>
+                                        <th scope="col" class="th-sm"> delete </th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                {% for items in zoned %}
+                                    {% if items.fk_TypeZoneDepot == None %}
+                                        <tr>
+                                            <td> <button id='{{ items.idZoneDepot }}' class="dyna"> -> </button></td>
+                                            <td> {{ items.nom }} </td>
+                                            <td> <button id='{{ items.idZoneDepot }}' class="dynad"> X </button> </td>
+                                        </tr>
+                                        {% else %}
+                                    {% endif %}
 
-                    {% endfor %}
-                        </tbody>
-                        <tfoot>
-                        <tr>
-                            <th> modify
-                            </th>
-                            <th>nom
-                            </th>
-                            <th>delete
-                            </th>
-                        </tr>
-                        </tfoot>
-                        </table>
+                                {% endfor %}
+                                </tbody>
+                                <tfoot>
+                                <tr>
+                                    <th> modify
+                                    </th>
+                                    <th>nom
+                                    </th>
+                                    <th>delete
+                                    </th>
+                                </tr>
+                                </tfoot>
+                                </table>
+                            {% endif %}
                         {% endif %}
                     {% endif %}
 
                     {% if id == '0' %}
                     {% else %}
                         {% if creation == 'ok' %}
-
-                        <div class="w-75 mx-auto">
+                            {% if forloop.counter ==  1 %}
+                            <div class="w-75 mx-auto">
                             <br>
                             <div class="input-default-wrapper w-75 mx-auto">
                                 <label for="idznedepot">ID : </label>
@@ -200,6 +202,7 @@
                                 <button class="btn-outline-unique mx-auto" type="button" id="savenewzone">Sauvegarder</button>
                             </div>
                         </div>
+                        {% endif %}
                         {% else %}
 
                         {% if id == items.idClient %}
@@ -212,9 +215,9 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-
                                 {% for items in cli %}
-                                    {% for itemsz in zoned %}
+                                    {% if items.idClient == id %}
+                                        {% for itemsz in zoned %}
                                             {% if itemsz.fk_TypeZoneDepot.nom == items.fk_TypeZone.nom %}
                                             <tr>
                                                 <td> <button id='{{ itemsz.idZoneDepot }}' class="dyna"> -> </button></td>
@@ -222,7 +225,8 @@
                                                 <td> <button id='{{ itemsz.idZoneDepot }}' class="dynad"> X </button> </td>
                                             </tr>
                                             {% endif %}
-                                    {% endfor %}
+                                        {% endfor %}
+                                    {% endif %}
                                 {% endfor %}
                                 </tbody>
                                 <tfoot>
