--- a/djangoproject/gestion_stock/templates/setting.html
+++ b/djangoproject/gestion_stock/templates/setting.html
@@ -6,7 +6,9 @@
 <div class="container">
     <form method="post" novalidate enctype="multipart/form-data"  style="text-align: left;font-weight:bold;">
         {% csrf_token %}
-        {{ form.as_p }}
+        <table>
+            {{ form.as_table }}
+        </table>
         <button type="submit" class="btn btn-success" style="position:sticky;bottom: 0; margin-left: 45%;">Valider</button>
         <button id="resetimg" type="button" class="btn btn-outline-blue-grey btn-sm"><i class="fa fa-undo"></i></button>
     </form>
@@ -49,9 +51,9 @@
 </body>
 
 <script>
-    setTimeout(function() {
+    /*setTimeout(function() {
         $("#openmenu").trigger("click");
-    },1000);
+    },1000);*/
 
     $('#resetimg').click(function () {
         $.ajax({
@@ -131,40 +133,106 @@
         $('#createtypecontact').tooltip();
         $('#createpays').tooltip();
         $('#createlitiges').tooltip();
-        /*
-        $("#hidenot li").height(200);
-        $("#id_cover1").parent('p').appendTo("#hidenot");
-        $("#id_cover2").parent('p').insertAfter("#umentree");
-        $("#id_cover3").parent('p').insertAfter("#article");
-        $("#id_cover4").parent('p').insertAfter("#clients");
-        $("#id_cover5").parent('p').insertAfter("#boncommandesortie");
-        $("#id_cover6").parent('p').insertAfter("#destinataires");
-        $("#id_cover7").parent('p').insertAfter("#boncommandeentree");
-        $("#id_cover8").parent('p').insertAfter("#transporteurs");
-        $("#id_cover9").parent('p').insertAfter("#bonlivraisonsortie");
-        $("#id_cover10").parent('p').insertAfter("#fournisseurs");
-        $("#id_cover11").parent('p').insertAfter("#bonlivraisonentree");
-        $("#id_cover12").parent('p').insertAfter("#colis");
-        $("#id_cover13").parent('p').insertAfter("#lve");*/
-        //$("label").remove();
-        $("input").addClass("w-responsive");
-        //$('button').eq('2').insertAfter('#hidenot');
         $('button').eq('2').addClass('btn btn-sm btn-blue-grey');
-        $('form').eq(0).appendTo($('#hidenot').parent('div'));
-        $('label').eq(0).text("Accueil").append("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;");
-        $('label').eq(1).text("U.M entree");
-        $('label').eq(2).text("Article").append("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;");
-        $('label').eq(3).text("Client").append("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;");
-        $('label').eq(4).text("B.C sortie").append("&nbsp;&nbsp;");
-        $('label').eq(5).text("Destinataire");
-        $('label').eq(6).text("B.C entree").append("&nbsp;&nbsp;&nbsp;");
-        $('label').eq(7).text("Transporteur");
-        $('label').eq(8).text("B.L Sortie").append("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;");
-        $('label').eq(9).text("Fournisseur");
-        $('label').eq(10).text("B.L Entree");
-        $('label').eq(11).text("Colis").append("&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;");
-        $('label').eq(12).text("L.V entree");
-        $('label').eq(13).text("U.M sortie");
+        //$('label').eq(0).hover(function () {
+
+        $('table tbody').find('tr').eq(0).mouseenter(function () {
+            $('#preview_gallery_image_wrapper_').remove();
+            '{% for items in settings %}'
+            if ('{{ items.id }}' == 1) {
+                '{% if items.cover1 %}'
+                console.log("imgcreat");
+                var image = $('<img />', {
+                    id:'preview_gallery_image_',
+                    class: 'admin-hotel-gallery-image' ,
+                    src: '{{ items.cover1.url }}'
+                });
+                var imageDiv = $('<div >',{
+                    id: 'preview_gallery_image_wrapper_',
+                });
+                image.appendTo(imageDiv);
+                var finalElement = $('<div/>',{
+                    id: 'gallery-wrapper'
+                });
+                imageDiv.appendTo(finalElement);
+                finalElement.appendTo($('body').find('div').eq(0));
+                //$('dv').append('<img id="img1" src="{{ items.cover1.url }}" class="img-fluid rounded text-left" alt="promotion-produit" height="75" width="75">');
+
+                '{% else %}'
+
+                console.log("imgcreat");
+                var image = $('<img />', {
+                    id:'preview_gallery_image_',
+                    class: 'admin-hotel-gallery-image' ,
+                    src: '{{ STATIC_URL }} /static/img/normal_ian-symbol-vehicle-suv.png'
+                });
+                var imageDiv = $('<div >',{
+                    id: 'preview_gallery_image_wrapper_'
+                    //background: url("{{ STATIC_URL }} /static/img/normal_ian-symbol-vehicle-suv.png"),
+                });
+                image.appendTo(imageDiv);
+                var finalElement = $('<div/>',{
+                    id: 'gallery-wrapper'
+                });
+                imageDiv.appendTo(finalElement);
+                finalElement.appendTo($('body').find('div').eq(0));
+                //$('dv').append('<img id="img1" src="{{ STATIC_URL }} /static/img/normal_ian-symbol-vehicle-suv.png" class="img-fluid rounded text-left" alt="promotion-produit" height="75" width="75">');
+                '{% endif %}'
+                $('#preview_gallery_image_wrapper_').css({'margin': '0 auto',
+                    'top': '0 auto',});
+            }
+            '{% endfor %}'
+        });
+        $('table tbody').find('tr').eq(0).mouseenter(function () {
+            $('#gallery-wrapper').remove();
+        });
+
+        $('label').eq(2).mouseenter(function () {
+            alert("there");
+            $('#preview_gallery_image_wrapper_').remove();
+            '{% for items in settings %}'
+            if ('{{ items.id }}' == 1) {
+                '{% if items.cover2 %}'
+                console.log("imgcreat");
+                var image = $('<img />', {
+                    id:'preview_gallery_image_',
+                    class: 'admin-hotel-gallery-image' ,
+                    src: '{{ items.cover2.url }}'
+                });
+                var imageDiv = $('<div >',{
+                    id: 'preview_gallery_image_wrapper_',
+                });
+                image.appendTo(imageDiv);
+                var finalElement = $('<div/>',{
+                    id: 'gallery-wrapper'
+                });
+                imageDiv.appendTo(finalElement);
+                finalElement.appendTo($('body').find('div').eq(0));
+                '{% else %}'
+                console.log("imgcreat");
+                var image = $('<img />', {
+                    id:'preview_gallery_image_',
+                    class: 'admin-hotel-gallery-image' ,
+                    src: '{{ STATIC_URL }} /static/img/lift.jpg'
+                });
+                var imageDiv = $('<div >',{
+                    id: 'preview_gallery_image_wrapper_'
+                });
+                image.appendTo(imageDiv);
+                var finalElement = $('<div/>',{
+                    id: 'gallery-wrapper'
+                });
+                imageDiv.appendTo(finalElement);
+                finalElement.appendTo($('body').find('div').eq(0));
+                '{% endif %}'
+                $('#preview_gallery_image_wrapper_').css({'margin': '0 auto',
+                    'top': '0 auto',});
+            }
+            '{% endfor %}'
+        });
+        $('label').eq(1).mouseleave(function () {
+            $('#gallery-wrapper').remove();
+        });
     });
 </script>
 {% endblock %}
